ms-auth/infra/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: ms-auth
  labels:
    app: ms-auth
spec:
  containers:
    - image: abbas/ms-auth
      name: ms-auth
      ports:
        - containerPort: 8081
