ms-auth/infra/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ms-auth-loadbalancer
spec:
  type: NodePort
  ports:
    - port: 81
      targetPort: 8081
    selector:
      app: ms-auth
